syntax = "proto3";

package com.github.oslokommune.oslonokkelen.push.proto;

option java_outer_classname = "KeychainPushApiV2";
option java_multiple_files = false;


// Content-Type: application/protobuf;type=system-description
message SystemDescriptionResponse {

  string name = 1;

  string information = 2;

  // List off assets your system is allowed to hand out permissions for
  repeated Asset assets = 3;

  // The system id
  string id = 4;

  message Asset {
    string id = 1;
  }

}

// Used both to push the original permission as well as updating
message PushRequest {

  // Identifies the permission. Client side generated to avoid issues related to double posting.
  string id = 1;

  repeated Permission permissions = 2;

  repeated Recipient recipients = 3;

  repeated Attachment attachments = 4;


  message Permission {
    LocalDateTimeInterval timeInterval = 1;
    repeated string assetIds = 2;
  }

  message Recipient {
    oneof recipient {
      PhoneNumber phoneNumber = 1;
    }
  }

}

message Attachment {
  oneof type {
    Link link = 1;
    AdditionalInformation additionalInformation = 2;
  }
}

// Content-Type: application/protobuf;type=push-response
message PushResponse {

}

message Link {
  string title = 1;
  string uri = 2 ;
}

message AdditionalInformation {
  string content = 1;
  Type type = 2 ;

  enum Type {
    PLAIN_TEXT = 0 ;
    MARKDOWN = 1;
  }
}


message PhoneNumber {
  string countryCode = 1;
  string number = 2;
}

message LocalDateTimeInterval {
  LocalDateTime from = 1;
  LocalDateTime until = 2;
}

message LocalDateTime {
  string date = 1;
  string time = 2;
}


// Content-Type: application/protobuf;type=error
message ErrorResponse {

  // Says something about what went wrong and what can be done about it.
  ErrorCode errorCode = 1;

  // Optional debug message. This is _not_ intended for the end user, but it can
  // contain useful technical information for debugging problems.
  string technicalDebugMessage = 2;

  enum ErrorCode {

    // Unexpected error.
    UNKNOWN = 0;

    // Id or key is wrong. Please don't try again without
    // fixing the credentials.
    INVALID_CREDENTIALS = 1;

    // Something is wrong with the response from Oslon√∏kkelen
    INVALID_RESPONSE = 2;

  }

}

// Content-Type: application/protobuf;type=state
message StateResponse {

  int32 version = 1;

  repeated PendingRecipient pendingRecipients = 2;
  repeated ConfirmedRecipient confirmedRecipients = 3;
  repeated Attachment attachments = 4;

  message PendingRecipient {
    PhoneNumber phoneNumber = 1;
  }

  message ConfirmedRecipient {

    // The phone number used assigning the permission
    PhoneNumber phoneNumber = 1;

    // How many times the permission has been used by the recipient
    int32 usageCounter = 2;

  }

}